# zapret-app

./: .gitignore  README.md  index.html  package-lock.json  package.json  prompt.txt  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  i18n.ts  index.css  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/ui/: button.tsx  dialog.tsx  select.tsx
src/locales/: ru.json
