[package]
name = "zprt-app"
version = "0.1.0"
edition = "2021"

[lib]
name = "zprt_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
zip = "2"
semver = "1"
sysinfo = "0.32"
notify-rust = "4"
windows = { version = "0.58", features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
  "Win32_UI_Shell"
] }
tauri-plugin-notification = "2"
chrono = { version = "0.4", features = ["clock"] }
